Minor issues fixes